# quickdraw-cnn

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  predict.yaml  train.yaml
scripts/: evaluate.sh  predict.sh  promote_to_registry.sh  train.sh
src/quickdraw_cnn/: config.py  data.py  evaluate.py  model.py  paths.py  predict.py  train.py  utils.py
tests/: test_data.py  test_model.py  test_paths.py
